--- a/index.html
+++ b/index.html
@@ -19,29 +19,21 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">Portfólio artístico</a></h1>
+							<p>O portefólio digital de Design de Interação.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+									<li><a class="icon fa-home" href="index.html"><span>Introdução</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
+											<li><a href="#">Desenho</a></li>
+											<li><a href="#">Pintura</a></li>
+											<li><a href="#">Escultura</a></li>
+											<li><a href="#">Fotografia</a></li>
+									 	</ul>
 									</li>
 									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
 									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
