--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Portfólio artístico</a></h1>
-							<p>O portefólio digital de Design de Interação.</p>
+							<p>O portefólio digital para Design de Interação.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -48,7 +48,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias da ESELx</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -57,11 +57,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>Desenho</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>Área de partilha de desenhos do Diário Gráfico e desenhos para projetos escolares</a>.</p>
 									</section>
 
 							</div>
@@ -71,11 +69,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>Pintura</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
+										<p>Área de partilha de projetos de Pintura </p>
 									</section>
 
 							</div>
