--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 											<li><a href="#">Pintura</a></li>
 											<li><a href="#">Escultura</a></li>
 											<li><a href="#">Fotografia</a></li>
+											<li><a href="#">Design Gráfico</a></li>
+											<li><a href="#">Representação Digital</a></li>
 									 	</ul>
 									</li>
 									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
@@ -81,16 +83,51 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>What's this built with?</h3>
+											<h3>Escultura</h3>
 										</header>
 										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
 										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
 									</section>
 
+								</div>
+								<div class="col-4 col-6-medium col-12-small">
+
+									<!-- Feature -->
+										<section>
+											<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+											<header>
+												<h3>Fotografia</h3>
+											</header>
+											<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
+											sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										</section>
+									</div>
+									<div class="col-4 col-6-medium col-12-small">
+
+										<!-- Feature -->
+											<section>
+												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<header>
+													<h3>Design Gráfico</h3>
+												</header>
+												<p><strong>Projetos de Design Gráfico realizados em programas como o Adobe Illustrator e Indesign</p>
+											</section>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+
+											<!-- Feature -->
+												<section>
+													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<header>
+														<h3>Representação Digital</h3>
+													</header>
+													<p><strong>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
+												</section>
+
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="#" class="button icon fa-file">Tell Me More</a></li>
+									<li><a href="#" class="button icon fa-file">Mais informação</li>
 								</ul>
 							</div>
 						</div>
