--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
-												<p><strong>Projetos de Design Gráfico realizados em programas como o Adobe Illustrator e Indesign</p>
+												<p>Projetos de Design Gráfico realizados em programas como o Adobe Illustrator e Indesign</p>
 											</section>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -121,7 +121,7 @@
 													<header>
 														<h3>Representação Digital</h3>
 													</header>
-													<p><strong>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
+													<p>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
 												</section>
 
 							</div>
