Read me e Imagens

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 											<li><a href="#">Desenho</a></li>
 											<li><a href="#">Pintura</a></li>
 											<li><a href="#">Escultura</a></li>
+											<li><a href="#">Cerâmica</a></li>
 											<li><a href="#">Fotografia</a></li>
-											<li><a href="#">Design Gráfico</a></li>
+											<li><a href="#">Arte multimédia</a></li>
 											<li><a href="#">Representação Digital</a></li>
+											<li><a href="#">Design Gráfico</a></li>
+											<li><a href="#">Design de Produto</a></li>
 									 	</ul>
 									</li>
 									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
@@ -94,9 +97,9 @@
 
 									<!-- Feature -->
 										<section>
-											<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<header>
-												<h3>Fotografia</h3>
+												<h3>Cerâmica</h3>
 											</header>
 											<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
 											sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
@@ -106,7 +109,37 @@
 
 										<!-- Feature -->
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+												<header>
+													<h3>Fotografia</h3>
+												</header>
+												<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
+												sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+											</section>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+
+											<!-- Feature -->
+												<section>
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<header>
+														<h3>Arte Multimédia</h3>
+													</header>
+													<p>Projetos que conjugam áudio e vídeo</p>
+												</section>
+
+											<!-- Feature -->
+												<section>
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<header>
+														<h3>Representação Digital</h3>
+													</header>
+													<p>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
+												</section>
+
+										<!-- Feature -->
+											<section>
+												<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
@@ -117,11 +150,11 @@
 
 											<!-- Feature -->
 												<section>
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 													<header>
-														<h3>Representação Digital</h3>
+														<h3>Design de Produto</h3>
 													</header>
-													<p>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
+													<p>Projetos realizados para a unidade curricular de Design de Produto</p>
 												</section>
 
 							</div>
