--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<header>
 											<h3>Desenho</h3>
 										</header>
-										<p>Área de partilha de desenhos do Diário Gráfico e desenhos para projetos escolares</a>.</p>
+										<p>Área de partilha de desenhos do Diário Gráfico e projetos escolares</a>.</p>
 									</section>
 
 							</div>
@@ -242,98 +242,7 @@
 							<!-- Sidebar -->
 								<div id="sidebar" class="col-4 col-12-medium">
 
-									<!-- Excerpts -->
-										<section>
-											<ul class="divided">
-												<li>
 
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-											</ul>
-										</section>
-
-									<!-- Highlights -->
-										<section>
-											<ul class="divided">
-												<li>
-
-													<!-- Highlight -->
-														<article class="box highlight">
-															<header>
-																<h3><a href="#">Something of note</a></h3>
-															</header>
-															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
-															<ul class="actions">
-																<li><a href="#" class="button icon fa-file">Learn More</a></li>
-															</ul>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Highlight -->
-														<article class="box highlight">
-															<header>
-																<h3><a href="#">Something of less note</a></h3>
-															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
-															<ul class="actions">
-																<li><a href="#" class="button icon fa-file">Learn More</a></li>
-															</ul>
-														</article>
-
-												</li>
-											</ul>
-										</section>
-
-								</div>
-
-						</div>
-					</div>
-				</section>
 
 			<!-- Footer -->
 				<section id="footer">
@@ -363,36 +272,28 @@
 								</section>
 							</div>
 							<div class="col-6 col-12-medium">
+
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p> Olá. Espero que tenha gostado do website.</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													Lisboa, Portugal <br />
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													(+351) 90 000 00 00
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">mica.neves98@gmail.com</a>
 												</li>
 											</ul>
 										</div>
+
 										<div class="col-6 col-12-small">
 											<ul class="icons">
-												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
-												</li>
 												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
-												</li>
-												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
+													<a href="#">https://www.instagram.com/ella_neves_art/</a>
 												</li>
 												<li class="icon fa-facebook">
 													<a href="#">facebook.com/untitled</a>
@@ -401,17 +302,13 @@
 										</div>
 									</div>
 								</section>
-							</div>
-						</div>
-					</div>
+
 					<div id="copyright" class="container">
 						<ul class="links">
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
-
-		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
