--- a/website.html
+++ b/website.html
@@ -40,7 +40,9 @@
 											<li><a href="#">Design de Produto</a></li>
 									 	</ul>
 									</li>
-									<li><a class="icon fa-cog" href="no-sidebar.html"><span>No sidebar </span></a></li>
+									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
+									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
+									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
 								</ul>
 							</nav>
 
@@ -56,114 +58,7 @@
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
-								<!-- Feature -->
-									<section>
-										<a href=" website.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-											<h3>Desenho</h3>
-										</header>
-										<p>Área de partilha de desenhos do Diário Gráfico e projetos escolares</a>.</p>
-									</section>
 
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>Pintura</h3>
-										</header>
-										<p>Área de partilha de projetos de Pintura </p>
-									</section>
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Escultura</h3>
-										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
-									</section>
-
-								</div>
-								<div class="col-4 col-6-medium col-12-small">
-
-									<!-- Feature -->
-										<section>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<header>
-												<h3>Cerâmica</h3>
-											</header>
-											<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-											sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
-										</section>
-									</div>
-									<div class="col-4 col-6-medium col-12-small">
-
-										<!-- Feature -->
-											<section>
-												<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-												<header>
-													<h3>Fotografia</h3>
-												</header>
-												<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-												sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
-											</section>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-
-											<!-- Feature -->
-												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-													<header>
-														<h3>Arte Multimédia</h3>
-													</header>
-													<p>Projetos que conjugam áudio e vídeo</p>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-											<!-- Feature -->
-												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-													<header>
-														<h3>Representação Digital</h3>
-													</header>
-													<p>Projetos de representação digital realizados em programas como AutoCAD e Blender</p>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-										<!-- Feature -->
-											<section>
-												<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-												<header>
-													<h3>Design Gráfico</h3>
-												</header>
-												<p>Projetos de Design Gráfico realizados em programas como o Adobe Illustrator e Indesign</p>
-											</section>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-
-											<!-- Feature -->
-												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-													<header>
-														<h3>Design de Produto</h3>
-													</header>
-													<p>Projetos realizados para a unidade curricular de Design de Produto</p>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-
-							<div class="col-12">
-								<ul class="actions">
-									<li><a href="#" class="button icon fa-file">Mais informação</li>
-								</ul>
-							</div>
 
 			<!-- Banner -->
 				<section id="banner">
