--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strongly Typed by HTML5 UP</title>
+		<title>Portefólio artístico </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Portfólio artístico</a></h1>
-							<p>O portefólio digital para Design de Interação.</p>
+							<p>Portefólio digital de Micaela Neves.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -51,14 +51,14 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias da ESELx</h2>
+							<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias na ESELx</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href=" website.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href=" nosidebar.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>Desenho</h3>
 										</header>
@@ -70,7 +70,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="nosidebar.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Pintura</h3>
 										</header>
@@ -82,12 +82,11 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="nosidebar.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Escultura</h3>
 										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										<p> Projetos escolares da unidade curricular de Escultura.</p>
 									</section>
 
 								</div>
@@ -95,24 +94,22 @@
 
 									<!-- Feature -->
 										<section>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="nosidebar.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<header>
 												<h3>Cerâmica</h3>
 											</header>
-											<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-											sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+											<p> Projetos escolares da unidade curricular de Cerâmica. </p>
 										</section>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 
 										<!-- Feature -->
 											<section>
-												<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+												<a href="nosidebar.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 												<header>
 													<h3>Fotografia</h3>
 												</header>
-												<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-												sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+												<p> Alguns registos fotográficos no âmbito de interesse pessoal ou escolar.</p>
 											</section>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -129,7 +126,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 											<!-- Feature -->
 												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="nosidebar.html" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 													<header>
 														<h3>Representação Digital</h3>
 													</header>
@@ -139,7 +136,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 										<!-- Feature -->
 											<section>
-												<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+												<a href="nosidebar.html" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
@@ -150,7 +147,7 @@
 
 											<!-- Feature -->
 												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="nosidebar.html" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 													<header>
 														<h3>Design de Produto</h3>
 													</header>
@@ -165,15 +162,7 @@
 								</ul>
 							</div>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
-					</div>
-				</section>
-
-			<!-- Main -->
+					<!-- Main -->
 				<section id="main">
 					<div class="container">
 						<div class="row">
@@ -242,79 +231,91 @@
 
 
 
-			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
-						</header>
-						<div class="row">
-							<div class="col-6 col-12-medium">
-								<section>
-									<form method="post" action="#">
-										<div class="row gtr-50">
-											<div class="col-6 col-12-small">
-												<input name="name" placeholder="Name" type="text" />
+									<!-- Footer -->
+										<section id="footer">
+											<div class="container">
+												<header>
+													<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+												</header>
+												<div class="row">
+													<div class="col-6 col-12-medium">
+														<section>
+															<form method="post" action="#">
+																<div class="row gtr-50">
+																	<div class="col-6 col-12-small">
+																		<input name="name" placeholder="Name" type="text" />
+																	</div>
+																	<div class="col-6 col-12-small">
+																		<input name="email" placeholder="Email" type="text" />
+																	</div>
+																	<div class="col-12">
+																		<textarea name="message" placeholder="Message"></textarea>
+																	</div>
+																	<div class="col-12">
+																		<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+																	</div>
+																</div>
+															</form>
+														</section>
+													</div>
+													<div class="col-6 col-12-medium">
+														<section>
+															<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
+															mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
+															leo nibh, rutrum eu malesuada.</p>
+															<div class="row">
+																<div class="col-6 col-12-small">
+																	<ul class="icons">
+																		<li class="icon fa-home">
+																			1234 Somewhere Road<br />
+																			Nashville, TN 00000<br />
+																			USA
+																		</li>
+																		<li class="icon fa-phone">
+																			(000) 000-0000
+																		</li>
+																		<li class="icon fa-envelope">
+																			<a href="#">info@untitled.tld</a>
+																		</li>
+																	</ul>
+																</div>
+																<div class="col-6 col-12-small">
+																	<ul class="icons">
+																		<li class="icon fa-twitter">
+																			<a href="#">@untitled</a>
+																		</li>
+																		<li class="icon fa-instagram">
+																			<a href="#">instagram.com/untitled</a>
+																		</li>
+																		<li class="icon fa-dribbble">
+																			<a href="#">dribbble.com/untitled</a>
+																		</li>
+																		<li class="icon fa-facebook">
+																			<a href="#">facebook.com/untitled</a>
+																		</li>
+																	</ul>
+																</div>
+															</div>
+														</section>
+													</div>
+												</div>
 											</div>
-											<div class="col-6 col-12-small">
-												<input name="email" placeholder="Email" type="text" />
+											<div id="copyright" class="container">
+												<ul class="links">
+													<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+												</ul>
 											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message"></textarea>
-											</div>
-											<div class="col-12">
-												<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
-											</div>
-										</div>
-									</form>
-								</section>
-							</div>
-							<div class="col-6 col-12-medium">
+										</section>
 
-								<section>
-									<p> Olá. Espero que tenha gostado do website.</p>
-									<div class="row">
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-home">
-													Lisboa, Portugal <br />
-												</li>
-												<li class="icon fa-phone">
-													(+351) 90 000 00 00
-												</li>
-												<li class="icon fa-envelope">
-													<a href="#">mica.neves98@gmail.com</a>
-												</li>
-											</ul>
-										</div>
+								</div>
 
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-instagram">
-													<a href="#">https://www.instagram.com/ella_neves_art/</a>
-												</li>
-												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</section>
+								<!-- Scripts -->
+									<script src="assets/js/jquery.min.js"></script>
+									<script src="assets/js/jquery.dropotron.min.js"></script>
+									<script src="assets/js/browser.min.js"></script>
+									<script src="assets/js/breakpoints.min.js"></script>
+									<script src="assets/js/util.js"></script>
+									<script src="assets/js/main.js"></script>
 
-					<div id="copyright" class="container">
-						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</section>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+							</body>
+						</html>
