--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>Portefólio artístico </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,40 +19,34 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+						<h1 id="logo"><a href="index.html">Portfólio artístico</a></h1>
+						<p>Portefólio digital de Micaela Neves.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+									<li><a class="icon fa-home" href="index.html"><span>Introdução</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Desenho</a></li>
+											<li><a href="#">Pintura</a></li>
+											<li><a href="#">Escultura</a></li>
+											<li><a href="#">Cerâmica</a></li>
+											<li><a href="#">Fotografia</a></li>
+											<li><a href="#">Arte multimédia</a></li>
+											<li><a href="#">Representação Digital</a></li>
+											<li><a href="#">Design Gráfico</a></li>
+											<li><a href="#">Design de Produto</a></li>
 										</ul>
 									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon fa-cog" href="no-sidebar.html"><span>No sidebar </span></a></li>
 								</ul>
 							</nav>
 
 					</div>
 				</section>
-
-			<!-- Main -->
+						<!-- Main -->
 				<section id="main">
 					<div class="container">
 						<div id="content">
