--- a/index.html
+++ b/index.html
@@ -154,21 +154,16 @@
 													<p>Projetos realizados para a unidade curricular de Design de Produto</p>
 												</section>
 											</div>
-											<div class="col-4 col-6-medium col-12-small">
 
-							<div class="col-12">
-								<ul class="actions">
-									<li><a href="#" class="button icon fa-file">Mais informação</li>
-								</ul>
-							</div>
 
-					<!-- Main -->
-				<section id="main">
-					<div class="container">
-						<div class="row">
+						   		<!-- Main -->
+											<section id="main">
+												<div class="container">
+													<div class="row">
 
-							<!-- Content -->
-								<div id="content" class="col-8 col-12-medium">
+
+														<section id="features">
+															<div class="container"> </div> </section>
 
 									<!-- Post -->
 										<article class="box post">
@@ -228,6 +223,7 @@
 
 							<!-- Sidebar -->
 								<div id="sidebar" class="col-4 col-12-medium">
+								</div>
 
 
 
