--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 											<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a <img src="images/pic07.jpg" alt="" /></a>
 													<header>
 														<h3>Representação Digital</h3>
 													</header>
