--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 											<!-- Feature -->
 												<section>
-													<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
+													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="representação" /></a>
 													<header>
 														<h3>Representação Digital</h3>
 													</header>
@@ -136,7 +136,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 										<!-- Feature -->
 											<section>
-												<a href="nosidebar.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+												<a href="" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
