--- a/index.html
+++ b/index.html
@@ -263,31 +263,24 @@
 																<div class="col-6 col-12-small">
 																	<ul class="icons">
 																		<li class="icon fa-home">
-																			1234 Somewhere Road<br />
-																			Nashville, TN 00000<br />
-																			USA
+																			Lisboa, Portugal
 																		</li>
 																		<li class="icon fa-phone">
-																			(000) 000-0000
+																			+351 999 999 999
 																		</li>
 																		<li class="icon fa-envelope">
-																			<a href="#">info@untitled.tld</a>
+																			<a href="#">mica.neves98@gmail.com</a>
 																		</li>
 																	</ul>
 																</div>
 																<div class="col-6 col-12-small">
 																	<ul class="icons">
-																		<li class="icon fa-twitter">
-																			<a href="#">@untitled</a>
+																	<li class="icon fa-instagram">
+																			<a href="#">instagram.com/ella_neves_art/</a>
 																		</li>
-																		<li class="icon fa-instagram">
-																			<a href="#">instagram.com/untitled</a>
-																		</li>
-																		<li class="icon fa-dribbble">
-																			<a href="#">dribbble.com/untitled</a>
 																		</li>
 																		<li class="icon fa-facebook">
-																			<a href="#">facebook.com/untitled</a>
+																			<a href="#">facebook.com/
 																		</li>
 																	</ul>
 																</div>
@@ -298,7 +291,7 @@
 											</div>
 											<div id="copyright" class="container">
 												<ul class="links">
-													<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+													<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 												</ul>
 											</div>
 										</section>
