--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Portfólio artístico</a></h1>
-							<p>Portefólio digital de Micaela Neves.</p>
+							<p>Portefólio digital de Micaela Neves</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -29,15 +29,15 @@
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
-											<li><a href="#">Desenho</a></li>
-											<li><a href="#">Pintura</a></li>
-											<li><a href="#">Escultura</a></li>
-											<li><a href="#">Cerâmica</a></li>
-											<li><a href="#">Fotografia</a></li>
-											<li><a href="#">Arte multimédia</a></li>
-											<li><a href="#">Representação Digital</a></li>
-											<li><a href="#">Design Gráfico</a></li>
-											<li><a href="#">Design de Produto</a></li>
+											<li><a href="Desenho.html">Desenho</a></li>
+											<li><a href="Pintura.html">Pintura</a></li>
+											<li><a href="Escultura.html">Escultura</a></li>
+											<li><a href="Cerâmica.html">Cerâmica</a></li>
+											<li><a href="Fotografia.html">Fotografia</a></li>
+											<li><a href="Artemultimédia.html">Arte multimédia</a></li>
+											<li><a href="Representaçãodigital.html">Representação Digital</a></li>
+											<li><a href="Designgráfico.html">Design Gráfico</a></li>
+											<li><a href="Designdeproduto.html">Design de Produto</a></li>
 									 	</ul>
 									</li>
 									<li><a class="icon fa-cog" href="no-sidebar.html"><span>No sidebar </span></a></li>
@@ -58,7 +58,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href=" nosidebar.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="Desenho.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>Desenho</h3>
 										</header>
@@ -70,7 +70,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="nosidebar.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="Pintura.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Pintura</h3>
 										</header>
@@ -82,7 +82,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="nosidebar.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="Escultura.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Escultura</h3>
 										</header>
@@ -94,7 +94,7 @@
 
 									<!-- Feature -->
 										<section>
-											<a href="nosidebar.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="Cerâmica.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 											<header>
 												<h3>Cerâmica</h3>
 											</header>
@@ -105,7 +105,7 @@
 
 										<!-- Feature -->
 											<section>
-												<a href="nosidebar.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+												<a href="Fotografia.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 												<header>
 													<h3>Fotografia</h3>
 												</header>
@@ -116,7 +116,7 @@
 
 											<!-- Feature -->
 												<section>
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<a href="Artemultimédia.html" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 													<header>
 														<h3>Arte Multimédia</h3>
 													</header>
@@ -126,7 +126,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 											<!-- Feature -->
 												<section>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="representação" /></a>
+													<a href="Representaçãodigital.html" class="image featured"><img src="images/pic07.jpg" alt="representação" /></a>
 													<header>
 														<h3>Representação Digital</h3>
 													</header>
@@ -136,7 +136,7 @@
 											<div class="col-4 col-6-medium col-12-small">
 										<!-- Feature -->
 											<section>
-												<a href="" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+												<a href="Designgráfico.html" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 												<header>
 													<h3>Design Gráfico</h3>
 												</header>
@@ -147,7 +147,7 @@
 
 											<!-- Feature -->
 												<section>
-													<a href="nosidebar.html" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+													<a href="Designdeproduto.html" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
 														<h3>Design de Produto</h3>
 													</header>
