--- a/Cerâmica.html
+++ b/Cerâmica.html
@@ -38,7 +38,7 @@
 											<li><a href="Representaçãodigital.html">Representação Digital</a></li>
 											<li><a href="Designgráfico.html">Design Gráfico</a></li>
 											<li><a href="Designdeproduto.html">Design de Produto</a></li>
-									 	</ul>
+										</ul>
 									</li>
 									<li><a class="icon fa-cog" href="no-sidebar.html"><span>No sidebar </span></a></li>
 								</ul>
@@ -52,77 +52,80 @@
 						<div id="content">
 
 							<!-- Post -->
-								<article class="box post">
-									<header>
-										<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias na ESELx</h2>
-									</header>
-									<h3>Cerâmica</h3>
-									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
-									<a class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<a class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<a class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-									Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-									vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-									magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-									tristique Curabitur leo nibh, rutrum eu malesuada  in, tristique
-									at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-									tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-									magna tempus</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<h3>Accumsan lorem ipsum veroeros</h3>
-									<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-									<h3>Ligula suspcipit fusce veroeros</h3>
-									<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Sed massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
+									<header>
+										<h2>Desenho</h2>
+                    </header>
+
+										<div class="row aln-center">
+											<div class="col-4 col-6-medium col-12-small">
+									     									<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												</section>
+							        	</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+								<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+												</section>
+							        	</div>
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic11.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic12.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic13.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic14.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic15.jpg" alt="" /></a>
+												</section>
+												</div>
+
+												<div class="col-4 col-6-medium col-12-small">
+
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic16.jpg" alt="" /></a>
+												</section>
+												</div>
+
+<
+							    <article>
+									<h3>Projetos de Desenho</h3>
+									<p>Os desenho presentes neste website são o resultado artístico de duas unidades curriculares do curso de Artes Visuais e Tecnologias da Eselx. </p>
+									<p>	Os primeiros três desenhos foram realizados para um exercício exploratório de técnicas surrealistas de modo a ilustrar um poema à escolha. Utilizei a frottage nos três desenhos e utilizei a colagem no terceiro desenho. Os restantes trabalhos foram concebidos para a disciplina de Concept Art, na qual concebemos um conceito e uma personagem. Os exercícios propunham a realização de thumbnails, vistas da cabeça, expressões da personagem e vistas do corpo da personagem.
+									</p>
+
 								</article>
 
 						</div>
@@ -133,7 +136,7 @@
 					<section id="footer">
 						<div class="container">
 							<header>
-								<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+								<h2>Questions or comments? </h2>
 							</header>
 							<div class="row">
 								<div class="col-6 col-12-medium">
@@ -158,9 +161,7 @@
 								</div>
 								<div class="col-6 col-12-medium">
 									<section>
-										<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-										mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-										leo nibh, rutrum eu malesuada.</p>
+										<p>Olá.</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<ul class="icons">
@@ -178,7 +179,7 @@
 											<div class="col-6 col-12-small">
 												<ul class="icons">
 												<li class="icon fa-instagram">
-														<a href="#">instagram.com/ella_neves_art/</a>
+														<a href="http://instagram.com/ella_neves_art/">ella_neves_art/</a>
 													</li>
 													</li>
 													<li class="icon fa-facebook">
@@ -198,9 +199,9 @@
 						</div>
 					</section>
 
-			</div>
+				</div>
 
-			<!-- Scripts -->
+				<!-- Scripts -->
 				<script src="assets/js/jquery.min.js"></script>
 				<script src="assets/js/jquery.dropotron.min.js"></script>
 				<script src="assets/js/browser.min.js"></script>
@@ -208,5 +209,5 @@
 				<script src="assets/js/util.js"></script>
 				<script src="assets/js/main.js"></script>
 
-		</body>
-	</html>
+				</body>
+				</html>
