--- a/Desenho.html
+++ b/Desenho.html
@@ -121,23 +121,10 @@
 
 <
 							    <article>
-									<h3>Accumsan lorem ipsum veroeros</h3>
-									<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
-									ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna.</p>
-									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
+									<h3>Projetos de Desenho</h3>
+									<p>Os desenho presentes neste website são o resultado artístico de duas unidades curriculares do curso de Artes Visuais e Tecnologias da Eselx. </p>
+									<p>	Os primeiros três desenhos foram realizados para um exercício exploratório de técnicas surrealistas de modo a ilustrar um poema à escolha. Utilizei a frottage nos três desenhos e utilizei a colagem no terceiro desenho. Os restantes trabalhos foram concebidos para a disciplina de Concept Art, na qual concebemos um conceito e uma personagem. Os exercícios propunham a realização de thumbnails, vistas da cabeça, expressões da personagem e vistas do corpo da personagem.
+									</p>
 
 								</article>
 
@@ -149,7 +136,7 @@
 					<section id="footer">
 						<div class="container">
 							<header>
-								<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+								<h2>Questions or comments? </h2>
 							</header>
 							<div class="row">
 								<div class="col-6 col-12-medium">
@@ -174,9 +161,7 @@
 								</div>
 								<div class="col-6 col-12-medium">
 									<section>
-										<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-										mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-										leo nibh, rutrum eu malesuada.</p>
+										<p>Olá.</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<ul class="icons">
@@ -194,7 +179,7 @@
 											<div class="col-6 col-12-small">
 												<ul class="icons">
 												<li class="icon fa-instagram">
-														<a href="#">instagram.com/ella_neves_art/</a>
+														<a href="http://instagram.com/ella_neves_art/">ella_neves_art/</a>
 													</li>
 													</li>
 													<li class="icon fa-facebook">
