--- a/Cerâmica.html
+++ b/Cerâmica.html
@@ -25,7 +25,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introdução</span></a></li>
+									<li><a class="icon fa-home" href="intro.html"><span>Introdução</span></a></li>
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
@@ -54,28 +54,28 @@
 							<!-- Post -->
 
 									<header>
-										<h2>Desenho</h2>
+										<h2>Cerâmica</h2>
                     </header>
 
 										<div class="row aln-center">
 											<div class="col-4 col-6-medium col-12-small">
 									     									<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic29.jpg" alt="" /></a>
 												</section>
 							        	</div>
 
 												<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic30.jpg" alt="" /></a>
 												</section>
 							        	</div>
 												<div class="col-4 col-6-medium col-12-small">
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic11.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic31.jpg" alt="" /></a>
 												</section>
 												</div>
 
@@ -83,7 +83,7 @@
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic12.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 												</section>
 												</div>
 
@@ -91,40 +91,20 @@
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic13.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic32.jpg" alt="" /></a>
 												</section>
 												</div>
 
 												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic14.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic15.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic16.jpg" alt="" /></a>
-												</section>
-												</div>
-
-<
+													<!-- Feature -->
+													<section>
+														<a href="" class="image featured"><img src="images/pic33.jpg" alt="" /></a>
+													</section>
+													</div>
 							    <article>
-									<h3>Projetos de Desenho</h3>
-									<p>Os desenho presentes neste website são o resultado artístico de duas unidades curriculares do curso de Artes Visuais e Tecnologias da Eselx. </p>
-									<p>	Os primeiros três desenhos foram realizados para um exercício exploratório de técnicas surrealistas de modo a ilustrar um poema à escolha. Utilizei a frottage nos três desenhos e utilizei a colagem no terceiro desenho. Os restantes trabalhos foram concebidos para a disciplina de Concept Art, na qual concebemos um conceito e uma personagem. Os exercícios propunham a realização de thumbnails, vistas da cabeça, expressões da personagem e vistas do corpo da personagem.
-									</p>
+									<h3>Projetos de Cerâmica</h3>
+									<p> Resultado de vários projetos para a unidade curriculare de Cerâmica. </p>
+
 
 								</article>
 
