--- a/Designgráfico.html
+++ b/Designgráfico.html
@@ -25,7 +25,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introdução</span></a></li>
+									<li><a class="icon fa-home" href="intro.html"><span>Introdução</span></a></li>
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
