--- a/Escultura.html
+++ b/Escultura.html
@@ -25,7 +25,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Introdução</span></a></li>
+									<li><a class="icon fa-home" href="intro.html"><span>Introdução</span></a></li>
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Áreas</span></a>
 										<ul>
@@ -54,7 +54,7 @@
 							<!-- Post -->
 
 									<header>
-										<h2>Pintura</h2>
+										<h2>Escultura</h2>
                     </header>
 
 										<div class="row aln-center">
@@ -95,34 +95,11 @@
 												</section>
 												</div>
 
-												<div class="col-4 col-6-medium col-12-small">
 
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic22.jpg" alt="" /></a>
-												</section>
-												</div>
 
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic23.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic24.jpg" alt="" /></a>
-												</section>
-												</div>
-
-<
 							    <article>
-									<h3>Projetos de Pintur</h3>
-									<p> As pinturas presentes são o resultado de vários projetos artísticos para as unidades curriculares de Pintura e Teoria e Prática da Criatividade. </p>
+									<h3>Projetos de Escultura</h3>
+									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
 
 
 								</article>
