--- a/Intro.html
+++ b/Intro.html
@@ -51,87 +51,51 @@
 					<div class="container">
 						<div id="content">
 
-							<!-- Post -->
+							<article class="box post">
+								<header>
+									<h2>Projetos da Licenciatura de Artes Visuais e Tecnologias na ESELx</h2>
+								</header>
 
-									<header>
-										<h2>Desenho</h2>
-                    </header>
+							<div class="row aln-center">
+								<div class="col-4 col-6-medium col-12-small">
 
-										<div class="row aln-center">
-											<div class="col-4 col-6-medium col-12-small">
-									     									<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-												</section>
-							        	</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-								<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
-												</section>
-							        	</div>
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic11.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic12.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic13.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic14.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic15.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic16.jpg" alt="" /></a>
-												</section>
-												</div>
-
-<
-							    <article>
-									<h3>Projetos de Desenho</h3>
-									<p>Os desenho presentes neste website são o resultado artístico de duas unidades curriculares do curso de Artes Visuais e Tecnologias da Eselx. </p>
-									<p>	Os primeiros três desenhos foram realizados para um exercício exploratório de técnicas surrealistas de modo a ilustrar um poema à escolha. Utilizei a frottage nos três desenhos e utilizei a colagem no terceiro desenho. Os restantes trabalhos foram concebidos para a disciplina de Concept Art, na qual concebemos um conceito e uma personagem. Os exercícios propunham a realização de thumbnails, vistas da cabeça, expressões da personagem e vistas do corpo da personagem.
-									</p>
+								<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+							</div>
+									<h3>And yeah, that's basically it</h3>
+									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
+									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
+									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
+									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
+									Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
+									vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
+									magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
+									tristique Curabitur leo nibh, rutrum eu malesuada  in, tristique
+									at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
+									tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
+									magna tempus</p>
+									<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
+									ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+									sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+									in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+									magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+									consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+									justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
+									Curabitur leo nibh, rutrum eu malesuada in tristique</p>
 
 								</article>
 
 						</div>
 					</div>
 				</section>
-
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
