--- a/Representaçãodigital.html
+++ b/Representaçãodigital.html
@@ -54,46 +54,43 @@ DOCTYPE HTML>
 							<!-- Post -->
 
 									<header>
-										<h2>Escultura</h2>
+										<h2>Representação Digital</h2>
                     </header>
 
-										<div class="row aln-center">
-											<div class="col-4 col-6-medium col-12-small">
-									     									<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic25.jpg" alt="" /></a>
-												</section>
-							        	</div>
+
+
+															<video width="640" height="360" controls preload="none">
+															    <!-- MP4 must be first for iPad! -->
+															    <source src="images/projeto3.mp4" type="video/mp4" /><!-- WebKit video    -->
+															    <source src="images/projeto3.mp4" type="video/webm" /><!-- Chrome / Newest versions of Firefox and Opera -->
+
+															    <!-- fallback to Flash: -->
+															    <object width="640" height="384" type="application/x-shockwave-flash" data="__FLASH__.SWF">
+															        <!-- Firefox uses the `data` attribute above, IE/Safari uses the param below -->
+															        <param name="movie" value="__FLASH__.SWF" />
+															        <param name="flashvars" value="image=__POSTER__.JPG&amp;file=images/projeto3.mp4" />
+															        <!-- fallback image. note the title field below, put the title of the video there -->
+															        <img src="images/pic06.jpeg" width="640" height="360" alt="__TITLE__"
+															             title="No video playback capabilities, please download the video below" />
+															    </object>
+															</video>
+															<!-- you *must* offer a download link as they may be able to play the file locally. customise this bit all you want -->
+															<p> <strong>Download Video:</strong>
+															    Closed Format:  <a href="images/projeto3.mp4">"MP4"</a>
+															    Open Format:    <a href="__VIDEO__.OGV">"OGG"</a>
+															</p>
+														</section>
+									        	</div>
 
 												<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic26.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic39.png" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 												</section>
 							        	</div>
-												<div class="col-4 col-6-medium col-12-small">
 
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic27.jpg" alt="" /></a>
-												</section>
-												</div>
 
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic28.jpg" alt="" /></a>
-												</section>
-												</div>
 
 
 
