--- a/Designdeproduto.html
+++ b/Designdeproduto.html
@@ -54,55 +54,37 @@
 							<!-- Post -->
 
 									<header>
-										<h2>Escultura</h2>
+										<h2>Design de Produto</h2>
                     </header>
 
 										<div class="row aln-center">
 											<div class="col-4 col-6-medium col-12-small">
 									     									<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic25.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic09_1.jpg" alt="" /></a>
+												</section>
+							        	</div>
+
+											<div class="col-4 col-6-medium col-12-small">
+									     									<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 												</section>
 							        	</div>
 
 												<div class="col-4 col-6-medium col-12-small">
 								<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic26.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic43.jpg" alt="" /></a>
 												</section>
 							        	</div>
-												<div class="col-4 col-6-medium col-12-small">
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic27.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic43_1.jpg" alt="" /></a>
 												</section>
 												</div>
 
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												</section>
-												</div>
-
-												<div class="col-4 col-6-medium col-12-small">
-
-												<!-- Feature -->
-												<section>
-													<a href="" class="image featured"><img src="images/pic28.jpg" alt="" /></a>
-												</section>
-												</div>
-
-
-
-							    <article>
-									<h3>Projetos de Escultura</h3>
-									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
-
-
-								</article>
 
 						</div>
 					</div>
