--- a/Escultura.html
+++ b/Escultura.html
@@ -94,12 +94,17 @@
 													<a href="" class="image featured"><img src="images/pic28.jpg" alt="" /></a>
 												</section>
 												</div>
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic28_1.jpg" alt="" /></a>
+												</section>
+												</div>
 
 
 
 							    <article>
 									<h3>Projetos de Escultura</h3>
-									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
+									<p> Resultado de vários projetos artísticos para a unidade curricular de Escultura. </p>
 
 
 								</article>
