--- a/Fotografia.html
+++ b/Fotografia.html
@@ -83,13 +83,37 @@
 
 												<!-- Feature -->
 												<section>
-													<a href="" class="image featured"><img src="images/pic35.jpg" alt="" /></a>
+													<a href="" class="image featured"><img src="images/pic36.jpg" alt="" /></a>
+												</section>
+												</div>
+												<div class="col-4 col-6-medium col-12-small">
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic35_1.jpg" alt="" /></a>
+												</section>
+												</div>
+												<div class="col-4 col-6-medium col-12-small">
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic43.jpg" alt="" /></a>
+												</section>
+												</div>
+												<div class="col-4 col-6-medium col-12-small">
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic43_1.jpg" alt="" /></a>
+												</section>
+												</div>
+												<div class="col-4 col-6-medium col-12-small">
+												<!-- Feature -->
+												<section>
+													<a href="" class="image featured"><img src="images/pic43_2.jpg" alt="" /></a>
 												</section>
 												</div>
 
-							    <article>
-									<h3>Projetos de Fotografia</h3>
-									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
+							          <article>
+									      <h3>Projetos de Fotografia</h3>
+								       	<p> Resultado de vários projetos artísticos para a unidade curricular de Comunicação por Imagem e Iluminação e Criatividade. </p>
 
 
 								</article>
