--- a/Artemultimédia.html
+++ b/Artemultimédia.html
@@ -61,40 +61,22 @@
 											<div class="col-4 col-6-medium col-12-small">
 									     									<!-- Feature -->
 												<section>
+													<video controls src="images/video.mp4" poster="images/previewvideo.png" preload="none" width="640" height="360"> </video>
 
-													<video width="640" height="360" controls preload="none">
-													    <!-- MP4 must be first for iPad! -->
-													    <source src="images/video.mp4" type="video/mp4" /><!-- WebKit video    -->
-													    <source src="images/video.mp4" type="video/webm" /><!-- Chrome / Newest versions of Firefox and Opera -->
 
-													    <!-- fallback to Flash: -->
-													    <object width="640" height="384" type="application/x-shockwave-flash" data="__FLASH__.SWF">
-													        <!-- Firefox uses the `data` attribute above, IE/Safari uses the param below -->
-													        <param name="movie" value="__FLASH__.SWF" />
-													        <param name="flashvars" value="image=__POSTER__.JPG&amp;file=images/video.mp4" />
-													        <!-- fallback image. note the title field below, put the title of the video there -->
-													        <img src="images/pic06.jpeg" width="640" height="360" alt="__TITLE__"
-													             title="No video playback capabilities, please download the video below" />
-													    </object>
-													</video>
-													<!-- you *must* offer a download link as they may be able to play the file locally. customise this bit all you want -->
-													<p> <strong>Download Video:</strong>
-													    Closed Format:  <a href="images/video.mp4">"MP4"</a>
-													    Open Format:    <a href="__VIDEO__.OGV">"OGG"</a>
-													</p>
 												</section>
 							        	</div>
 
 
+											<section>
 												<div class="row aln-center">
 													<div class="col-4 col-6-medium col-12-small">
 							    <article>
 									<h3>Projetos de Arte Multimédia</h3>
-									<p> Resultado de vários projetos artísticos para a unidade curriculare de Escultura. </p>
-</div>
-
-								</article>
-
+									<p> Projeto escolar para a unidade curricular de Arte Multim. </p>
+                  </div>
+      						</article>
+								</section>
 						</div>
 					</div>
 				</section>
